MDEV-7779 View definition changes upon creation.         Fixed by using POINT instead of ST_POINT in the item.         Later need to fix that with proper ST_POINT implementation